# inception

./: .gitignore  README.md  pyproject.toml
.agent/skills/: skill-entity-extractor.py  skill-execution-engine.sh  skill-export-obsidian.sh  skill-fact-validator.sh  skill-gap-explorer.sh  skill-incremental-sync.sh  skill-interactive-tui.sh  skill-llm-extractor.sh  skill-meta-icl.sh  skill-multi-source-fusion.sh  skill-neurosymbolic.sh  skill-ontology-linker.sh  skill-rheomode-transform.sh  skill-stigmergic-trace.sh  skill-temporal-reasoner.py  skill-temporal-reasoner.sh  skill-vector-index.sh  skill-vision-vlm.sh
.agent/swarms/: entelecheia-plus.yaml
.agent/workflows/: web-ux.md
.archived-frontend-ng/: angular.json  package.json
.archived-frontend-ng/src/: styles.scss
docs/: API.md  ARCHITECTURE.md  CLI.md  LEARNING.md  UIUX.md  USER_STORIES.md
docs/design/: oauth_architecture.md  phases.md  web_ux_architecture.md
docs/man/: inception.1
eval/: error_taxonomy.md  experiments.md  intents.md  invariants.md  run_eval.py  safety_contract.md  scorecard.md  threat_model.md
eval/adr/: ADR-001-eval-first.md  ADR-template.md
eval/goldens/: dataset_card.md  goldens.jsonl  taxonomic_types.jsonl
frontend/: agent-auth-demo.html  index.html  package-lock.json  package.json
frontend-neuro/: index.html  main.js  package.json
frontend-ng/: README.md  angular.json  package-lock.json
frontend-ng/src/: index.html  styles.scss
frontend/public/: inception.css  manifest.json  sw.js
inception/: __init__.py  cli.py  config.py
inception/analyze/: __init__.py  claims.py  entities.py  gaps.py  procedures.py  resolver.py
inception/auth/: __init__.py  oauth_providers.py  provider_config.py  token_store.py
inception/context/: context.py
inception/db/: __init__.py  dialectical.py  graphtag.py  hyperknowledge.py  hyperknowledge_lmdb.py  keys.py  lmdb_env.py  records.py  taxonomic_types.py
inception/enhance/: __init__.py  learning.py
inception/eval/: refinement.py
inception/execution/: skill_executor.py
inception/extract/: __init__.py  alignment.py  ocr.py  scenes.py  taxonomic_prompts.py  transcription.py
inception/graph/: __init__.py  builder.py
inception/ingest/: __init__.py  documents.py  source_manager.py  web.py  web_intelligence.py  youtube.py
inception/integration/: pluribus.py
inception/interpret/: questioning_modes.py  semantic_bridge.py
inception/interpretation/: uncertainty.py
inception/mesh/: coordination.py
inception/output/: __init__.py  (+1 more)
kinesis-pure-art/: index.html
observatory/: cognitive.html  evidence.html  gallery.html  index.html  package.json
scripts/: seed_knowledge.py
tests/: __init__.py  conftest.py  requirements.txt  test_inception.py
(+388 files in other folders)
